--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body{font-family:'Segoe UI',system-ui,sans-serif;background:#0d1b2e;color:#e8eaf
 .card{background:#13253d;border-radius:12px;padding:24px;border:1px solid #1e3a5f;margin-bottom:20px}
 .card-title{font-size:16px;font-weight:600;color:#c9a84c;margin-bottom:16px;display:flex;align-items:center;gap:8px}
 .chart-row{display:grid;grid-template-columns:1fr 1fr;gap:20px;margin-bottom:20px}
-.chart-card{background:#13253d;border-radius:12px;padding:24px;border:1px solid #1e3a5f}
+.chart-card{background:#13253d;border-radius:12px;padding:24px;border:1px solid #1e3a5f;position:relative}
 .chart-title{font-size:14px;font-weight:600;color:#c9a84c;margin-bottom:16px}
 .warning-banner{background:#2d1a0e;border:1px solid #f59e0b;border-radius:10px;padding:16px 20px;margin-bottom:24px;display:flex;align-items:center;gap:12px;cursor:pointer}
 .warning-banner:hover{background:#3d2a1e}
@@ -227,27 +227,27 @@ canvas{max-height:320px}
     <!-- Monthly Income / Expenses / Profit -->
     <div class="chart-card" style="margin-bottom:20px">
       <div class="chart-title">📈 Monthly P&L Summary — Income vs Expenses vs Profit</div>
-      <canvas id="monthlyPLChart" height="90"></canvas>
+      <canvas id="monthlyPLChart" style="min-height:280px;width:100%"></canvas>
     </div>
 
     <div class="chart-row">
     <div class="chart-card">
       <div class="chart-title">📈 Income vs Expenses by Property (Jan 2026)</div>
-      <canvas id="propIncomeChart"></canvas>
+      <canvas id="propIncomeChart" style="min-height:280px;width:100%"></canvas>
     </div>
     <div class="chart-card">
       <div class="chart-title">🍩 Expense Breakdown by Category</div>
-      <canvas id="expenseDonut"></canvas>
+      <canvas id="expenseDonut" style="min-height:280px;width:100%"></canvas>
     </div>
   </div>
   <div class="chart-row">
     <div class="chart-card">
       <div class="chart-title">📊 PadSplit Income — Jan vs Feb 2026</div>
-      <canvas id="padsplitChart"></canvas>
+      <canvas id="padsplitChart" style="min-height:280px;width:100%"></canvas>
     </div>
     <div class="chart-card">
       <div class="chart-title">⚡ Monthly Utility Costs by Property</div>
-      <canvas id="utilityChart"></canvas>
+      <canvas id="utilityChart" style="min-height:280px;width:100%"></canvas>
     </div>
   </div>
 </div>
@@ -1458,11 +1458,16 @@ async function checkPw() {
 }
 // Auto-unlock if already authenticated this session
 if (sessionStorage.getItem('twcl_auth')==='1') {
-  document.addEventListener('DOMContentLoaded',function(){
+  function doUnlock() {
     document.getElementById('pw-overlay').style.display='none';
     document.getElementById('main-content').style.display='block';
     initDashboard();
-  });
+  }
+  if (document.readyState === 'loading') {
+    document.addEventListener('DOMContentLoaded', doUnlock);
+  } else {
+    doUnlock();
+  }
 }
 </script>
 
