Add Revenue by Platform pie chart + clean KPI section

--- a/index.html
+++ b/index.html
@@ -188,36 +188,53 @@ canvas{max-height:320px}
     <div style="font-size:12px;color:#8899aa;margin-top:6px">~65% complete for Feb 2026 — income figures are estimates; expense totals will update when Feb checking arrives</div>
   </div>
 
-  <div class="kpi-grid">
+  <!-- KPI Section Header styles -->
+  <style>
+    .kpi-section-label{font-size:11px;font-weight:700;text-transform:uppercase;letter-spacing:2px;color:#8899aa;margin:0 0 12px 4px;padding-left:4px;border-left:3px solid #c9a84c}
+    .kpi-grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:20px;margin-bottom:10px}
+    @media(max-width:768px){.kpi-grid-3{grid-template-columns:1fr}}
+    .kpi-divider{border:none;border-top:1px solid #1e3a5f;margin:20px 0 18px}
+  </style>
+
+  <!-- CURRENT MONTH -->
+  <div class="kpi-section-label">📅 Current Month — February 2026 (est.)</div>
+  <div class="kpi-grid-3">
     <div class="kpi-card kpi-green">
-      <div class="kpi-label">Total Income (Jan + Feb)</div>
+      <div class="kpi-label">Income</div>
+      <div class="kpi-value">$42,377</div>
+      <div class="kpi-sub">PadSplit $16,237 · LTR $8,516 · Grandview $8,638 · est. pending Feb statement</div>
+    </div>
+    <div class="kpi-card kpi-red">
+      <div class="kpi-label">Expenses</div>
+      <div class="kpi-value">~$18,200</div>
+      <div class="kpi-sub">Mortgages $13,812 · utilities + vendors est. · ⚠️ Feb statement pending</div>
+    </div>
+    <div class="kpi-card kpi-gold">
+      <div class="kpi-label">Net Revenue</div>
+      <div class="kpi-value">~$24,177</div>
+      <div class="kpi-sub">Estimate only · will update when Feb checking arrives</div>
+    </div>
+  </div>
+
+  <hr class="kpi-divider">
+
+  <!-- YEAR TO DATE -->
+  <div class="kpi-section-label">📊 Year-to-Date 2026 — Jan + Feb</div>
+  <div class="kpi-grid-3">
+    <div class="kpi-card kpi-green">
+      <div class="kpi-label">YTD Income</div>
       <div class="kpi-value">$79,240</div>
       <div class="kpi-sub">Jan $36,863 · Feb $42,377 est.</div>
     </div>
     <div class="kpi-card kpi-red">
-      <div class="kpi-label">Total Expenses (Jan known)</div>
-      <div class="kpi-value">$31,500+</div>
-      <div class="kpi-sub">Jan mortgages + utilities + vendors · Feb incomplete</div>
+      <div class="kpi-label">YTD Expenses</div>
+      <div class="kpi-value">~$49,747</div>
+      <div class="kpi-sub">Jan $31,547 · Feb ~$18,200 est.</div>
     </div>
     <div class="kpi-card kpi-gold">
-      <div class="kpi-label">PadSplit Income (Jan)</div>
-      <div class="kpi-value">$15,726</div>
-      <div class="kpi-sub">5 properties · $366 Grandview (new, ramping)</div>
-    </div>
-    <div class="kpi-card kpi-gold">
-      <div class="kpi-label">PadSplit Income (Feb est.)</div>
-      <div class="kpi-value">$16,237</div>
-      <div class="kpi-sub">thru 2/24 only · final TBD</div>
-    </div>
-    <div class="kpi-card">
-      <div class="kpi-label">Long-Term Rent (Monthly)</div>
-      <div class="kpi-value">$8,516</div>
-      <div class="kpi-sub">Mesa $2,114 · 13th $2,480 · Isaiah $904 · Michael $980 · Terrie $964</div>
-    </div>
-    <div class="kpi-card">
-      <div class="kpi-label">Grandview (New) Income</div>
-      <div class="kpi-value">$8,638</div>
-      <div class="kpi-sub">PadSplit + Airbnb + Jarrett + Omar · Feb est.</div>
+      <div class="kpi-label">YTD Net Revenue</div>
+      <div class="kpi-value">~$29,493</div>
+      <div class="kpi-sub">Jan $5,316 confirmed · Feb est. · updates when Feb data complete</div>
     </div>
   </div>
 
@@ -240,10 +257,21 @@ canvas{max-height:320px}
       <canvas id="expenseDonut" style="min-height:280px;width:100%"></canvas>
     </div>
   </div>
-  <div class="chart-row">
+  <!-- Revenue by Platform Pie Chart -->
+  <div class="chart-row" style="margin-bottom:20px">
+    <div class="chart-card">
+      <div class="chart-title">🥧 Revenue by Platform — YTD 2026</div>
+      <canvas id="vendorPieChart" style="min-height:280px;width:100%"></canvas>
+    </div>
     <div class="chart-card">
       <div class="chart-title">📊 PadSplit Income — Jan vs Feb 2026</div>
       <canvas id="padsplitChart" style="min-height:280px;width:100%"></canvas>
+    </div>
+  </div>
+  <div class="chart-row" style="display:none">
+    <div class="chart-card">
+      <div class="chart-title">📊 PadSplit Income — Jan vs Feb 2026 (hidden duplicate placeholder)</div>
+      <canvas id="padsplitChartDupe" style="min-height:280px;width:100%"></canvas>
     </div>
     <div class="chart-card">
       <div class="chart-title">⚡ Monthly Utility Costs by Property</div>
@@ -1382,6 +1410,41 @@ function initDashboard() {
   });
 
   // PadSplit bar chart
+  // Revenue by Platform Pie Chart
+  new Chart(document.getElementById('vendorPieChart'), {
+    type: 'pie',
+    data: {
+      labels: ['PadSplit', 'Airbnb', 'Direct (Zelle / Rent Perfect / Venmo)'],
+      datasets: [{
+        data: [31963, 9500, 37777],
+        backgroundColor: ['#4CAF50', '#FF5722', '#2196F3'],
+        borderColor: ['#2d7a32', '#c84315', '#1565C0'],
+        borderWidth: 2,
+        hoverOffset: 10
+      }]
+    },
+    options: {
+      responsive: true,
+      maintainAspectRatio: true,
+      plugins: {
+        legend: {
+          position: 'bottom',
+          labels: { color: '#cde', padding: 16, font: { size: 13 } }
+        },
+        tooltip: {
+          callbacks: {
+            label: function(ctx) {
+              var val = ctx.parsed;
+              var total = ctx.dataset.data.reduce((a,b)=>a+b,0);
+              var pct = ((val/total)*100).toFixed(1);
+              return ' $' + val.toLocaleString() + '  (' + pct + '%)';
+            }
+          }
+        }
+      }
+    }
+  });
+
   new Chart(document.getElementById('padsplitChart'), {
     type: 'bar',
     data: {
