--- a/index.html
+++ b/index.html
@@ -302,6 +302,36 @@ canvas{max-height:320px}
 
 <!-- EXPENSES TAB -->
 <div id="tab-expenses" class="tab-content">
+
+  <!-- Stacked Expense Chart: By Property & Category -->
+  <div style="background:#1e2433;border-radius:14px;padding:22px 24px;margin-bottom:28px;border:1px solid #2d3448;">
+    <div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:12px;margin-bottom:18px;">
+      <div>
+        <h3 style="color:#f1f5f9;margin:0 0 4px 0;font-size:17px;">📊 Expenses by Property &amp; Category</h3>
+        <div style="color:#94a3b8;font-size:12px;">Stacked view — each bar = one property, color = expense category</div>
+      </div>
+      <div style="display:flex;gap:8px;flex-wrap:wrap;">
+        <button onclick="setStackView('monthly')" id="btnStackMonthly"
+          style="padding:7px 16px;border-radius:20px;border:none;cursor:pointer;font-size:12px;font-weight:600;background:#3b82f6;color:#fff;">Monthly</button>
+        <button onclick="setStackView('annual')" id="btnStackAnnual"
+          style="padding:7px 16px;border-radius:20px;border:none;cursor:pointer;font-size:12px;font-weight:600;background:#2d3448;color:#94a3b8;">Annual</button>
+      </div>
+    </div>
+    <div style="position:relative;height:360px;">
+      <canvas id="stackedExpenseChart" style="width:100%;height:100%;"></canvas>
+    </div>
+    <!-- Legend -->
+    <div id="stackedExpLegend" style="display:flex;flex-wrap:wrap;gap:8px 16px;margin-top:14px;padding:10px 14px;background:#161b2a;border-radius:8px;border:1px solid #2d3448;"></div>
+    <!-- Addenda -->
+    <div style="display:flex;flex-wrap:wrap;gap:10px 20px;margin-top:10px;padding:10px 14px;background:#0f1421;border-radius:8px;border:1px solid #2d3448;">
+      <div style="font-size:11px;color:#64748b;"><strong style="color:#94a3b8;">Each bar</strong> = one investment property (excludes primary residence &amp; inactive)</div>
+      <div style="font-size:11px;color:#64748b;"><strong style="color:#94a3b8;">Colors</strong> = expense category stacked within each property bar</div>
+      <div style="font-size:11px;color:#64748b;"><strong style="color:#94a3b8;">Monthly view</strong> = Jan &amp; Feb 2026 side-by-side per property</div>
+      <div style="font-size:11px;color:#64748b;"><strong style="color:#94a3b8;">Annual view</strong> = YTD totals per property (all months combined)</div>
+      <div style="font-size:11px;color:#64748b;"><strong style="color:#94a3b8;">Hover</strong> = see exact $ amount per category per property</div>
+    </div>
+  </div>
+
   <h2 style="color:#c9a84c;margin-bottom:16px">💸 All Transactions</h2>
   <div class="filter-row">
     <input class="search-input" id="expSearch" placeholder="🔍 Search description..." oninput="filterExpenses()">
@@ -1399,6 +1429,7 @@ function initDashboard() {
   updatePendingCount();
   renderExpenses('','','','all');
   updateUnresolvedTotal();
+  initStackedExpenseChart();
 
   // Chart defaults
   // ─── GLOBAL CHART DEFAULTS ────────────────────────────────────────────────
@@ -1877,6 +1908,115 @@ if (sessionStorage.getItem('twcl_auth')==='1') {
     doUnlock();
   }
 }
+
+// ========================================================
+// STACKED EXPENSE CHART BY PROPERTY & CATEGORY
+// ========================================================
+var stackedExpenseChartInstance = null;
+
+var stackedData = {
+  properties: ['Mesa','13th Ave','5th Dr','38th Dr','Janice Way','Grandview','25th St'],
+  propertyIds: ['p1','p2','p3','p5','p6','p7','p8'],
+  months: ['Jan 2026','Feb 2026'],
+  byPropertyMonth: {
+    'p1': { 'Jan 2026': { 'Mortgage': 1066 }, 'Feb 2026': {} },
+    'p2': { 'Jan 2026': { 'Mortgage': 2418.35 }, 'Feb 2026': {} },
+    'p3': { 'Jan 2026': { 'Mortgage': 2419.48, 'Electric': 54.90, 'Internet': 200, 'Solar': 93 }, 'Feb 2026': { 'Internet': 200 } },
+    'p5': { 'Jan 2026': { 'Mortgage': 2594.95, 'Materials': 54.58, 'Repairs': 120, 'Electric': 76.82, 'Gas': 89.90, 'Internet': 32.08 }, 'Feb 2026': { 'Materials': 29.15, 'Internet': 16.04 } },
+    'p6': { 'Jan 2026': { 'Landscaping': 364.86, 'Repairs': 320.90, 'Electric': 214.16, 'Gas': 95.47, 'Internet': 215.42 }, 'Feb 2026': { 'Internet': 215.40 } },
+    'p7': { 'Jan 2026': { 'Mortgage': 3763, 'Furnishings': 50, 'Landscaping': 965, 'Marketing': 505, 'Materials': 1436.46, 'Repairs': 1860, 'Software': 126.36, 'Electric': 59.25, 'Internet': 156.37 }, 'Feb 2026': { 'Materials': 1010.42 } },
+    'p8': { 'Jan 2026': { 'Mortgage': 2420.24, 'Repairs': 120, 'Electric': 127.44, 'Gas': 63.65, 'Internet': 80 }, 'Feb 2026': { 'Materials': 29.15 } }
+  }
+};
+
+var catColors = {
+  'Mortgage':'#ef4444','Electric':'#f97316','Gas':'#eab308','Internet':'#8b5cf6',
+  'Solar':'#22c55e','Water':'#06b6d4','Repairs':'#3b82f6','Materials':'#f59e0b',
+  'Landscaping':'#84cc16','Cleaning':'#ec4899','Furnishings':'#a78bfa',
+  'Marketing':'#fb7185','Software':'#94a3b8','Insurance':'#64748b',
+  'VA & Staff':'#c084fc','Legal':'#67e8f9','Travel':'#fde68a','Other':'#475569'
+};
+
+function buildStackedDatasets(view) {
+  var allCats = Object.keys(catColors);
+  var props = stackedData.properties;
+  var pIds = stackedData.propertyIds;
+  var months = stackedData.months;
+  var datasets = [];
+  if (view === 'monthly') {
+    var labels = [];
+    months.forEach(function(m){ props.forEach(function(p){ labels.push(p + ' (' + m.split(' ')[0] + ')'); }); });
+    allCats.forEach(function(cat) {
+      var vals = [];
+      months.forEach(function(m){ pIds.forEach(function(pid){ var d=stackedData.byPropertyMonth[pid][m]||{}; vals.push(d[cat]||0); }); });
+      if (!vals.some(function(v){return v>0;})) return;
+      datasets.push({ label:cat, data:vals, backgroundColor:catColors[cat]||'#475569', borderColor:'rgba(0,0,0,0.15)', borderWidth:1, borderRadius:3 });
+    });
+    return { labels:labels, datasets:datasets };
+  } else {
+    var labels = props;
+    allCats.forEach(function(cat) {
+      var vals = pIds.map(function(pid){ return months.reduce(function(s,m){ var d=stackedData.byPropertyMonth[pid][m]||{}; return s+(d[cat]||0); },0); });
+      if (!vals.some(function(v){return v>0;})) return;
+      datasets.push({ label:cat, data:vals, backgroundColor:catColors[cat]||'#475569', borderColor:'rgba(0,0,0,0.15)', borderWidth:1, borderRadius:4 });
+    });
+    return { labels:labels, datasets:datasets };
+  }
+}
+
+function buildStackedLegend(datasets) {
+  var el = document.getElementById('stackedExpLegend');
+  if (!el) return;
+  el.innerHTML = datasets.map(function(ds){
+    return '<div style="display:flex;align-items:center;gap:6px;font-size:11px;color:#cbd5e1;">' +
+      '<div style="width:12px;height:12px;background:'+ds.backgroundColor+';border-radius:2px;flex-shrink:0;"></div>'+
+      '<span>'+ds.label+'</span></div>';
+  }).join('');
+}
+
+var stackChartOptions = {
+  responsive:true, maintainAspectRatio:false,
+  plugins: {
+    legend:{display:false},
+    tooltip:{
+      callbacks:{
+        title:function(i){return i[0].label;},
+        label:function(i){ if(!i.raw||i.raw===0) return null; return ' '+i.dataset.label+': $'+i.raw.toLocaleString('en-US',{minimumFractionDigits:2,maximumFractionDigits:2}); },
+        footer:function(i){ var t=i.reduce(function(s,x){return s+(x.raw||0);},0); return 'Total: $'+t.toLocaleString('en-US',{minimumFractionDigits:2,maximumFractionDigits:2}); }
+      },
+      filter:function(i){return i.raw>0;},
+      backgroundColor:'rgba(15,20,33,0.95)',titleColor:'#f1f5f9',bodyColor:'#cbd5e1',
+      footerColor:'#3b82f6',borderColor:'#3b82f6',borderWidth:1,padding:12,cornerRadius:8
+    }
+  },
+  scales:{
+    x:{stacked:true, ticks:{color:'#94a3b8',font:{size:10},maxRotation:30}, grid:{color:'rgba(255,255,255,0.04)'}},
+    y:{stacked:true, ticks:{color:'#94a3b8',font:{size:11},callback:function(v){return '$'+(v/1000).toFixed(0)+'k';}}, grid:{color:'rgba(255,255,255,0.07)'}}
+  }
+};
+
+function setStackView(view) {
+  document.getElementById('btnStackMonthly').style.background = view==='monthly'?'#3b82f6':'#2d3448';
+  document.getElementById('btnStackMonthly').style.color = view==='monthly'?'#fff':'#94a3b8';
+  document.getElementById('btnStackAnnual').style.background = view==='annual'?'#3b82f6':'#2d3448';
+  document.getElementById('btnStackAnnual').style.color = view==='annual'?'#fff':'#94a3b8';
+  var built = buildStackedDatasets(view);
+  buildStackedLegend(built.datasets);
+  if (stackedExpenseChartInstance) {
+    stackedExpenseChartInstance.data.labels = built.labels;
+    stackedExpenseChartInstance.data.datasets = built.datasets;
+    stackedExpenseChartInstance.update('active');
+  }
+}
+
+function initStackedExpenseChart() {
+  var ctx = document.getElementById('stackedExpenseChart');
+  if (!ctx) return;
+  var built = buildStackedDatasets('monthly');
+  buildStackedLegend(built.datasets);
+  stackedExpenseChartInstance = new Chart(ctx, { type:'bar', data:{ labels:built.labels, datasets:built.datasets }, options:stackChartOptions });
+}
+
 </script>
 
 </body>
