--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ canvas{max-height:320px}
 }
 
 
-#expenseDonut, #vendorPieChart {
+#vendorPieChart {
     width: 380px !important;
     height: 380px !important;
 }
@@ -323,7 +323,7 @@ canvas{max-height:320px}
     </div>
     <div class="chart-card">
       <div class="chart-title">🍩 Expense Breakdown by Category</div>
-      <div style="display:flex;justify-content:center;align-items:center;"><div style="display:flex;justify-content:center;align-items:center;"><canvas id="expenseDonut" style="width:500px!important;height:500px!important;max-width:500px;max-height:500px" style="width:500px!important;height:500px!important;max-width:500px;max-height:500px"></canvas></div></div>
+      <canvas id="expenseDonut" style="width:100%;height:400px;min-height:400px"></canvas>
     </div>
   </div>
   <!-- Revenue by Platform Pie Chart -->
@@ -1790,56 +1790,65 @@ function initDashboard() {
     }
   });
 
-  // ─── 2. EXPENSE DONUT ───────────────────────────────────────────────────
+  // ─── 2. EXPENSE BREAKDOWN ─ Horizontal Bar ─────────────────────────────
   (function(){
-    const expData = [17849,1005,503,559,503,93,1540,1330,850,600];
-    const expLabels = ['Mortgage','Electric','Gas','Internet','Water','Solar','Repairs','Landscaping','Cleaning','Other'];
-    const expColors = ['#c9a84c','#fbbf24','#f97316','#a855f7','#38bdf8','#22c55e','#60a5fa','#4ade80','#f472b6','#94a3b8'];
-    const total = expData.reduce((a,b)=>a+b,0);
-
-    // Center text plugin (inline)
-    const centerTextPlugin = {
-      id:'centerText',
-      afterDraw(chart){
-        if(chart.config.type !== 'doughnut') return;
-        const {ctx, chartArea:{top,bottom,left,right}} = chart;
-        const cx = (left+right)/2, cy = (top+bottom)/2;
-        ctx.save();
-        ctx.textAlign='center'; ctx.textBaseline='middle';
-        ctx.fillStyle='#c9a84c'; ctx.font='bold 18px Segoe UI';
-        ctx.fillText('$'+total.toLocaleString(), cx, cy-10);
-        ctx.fillStyle='#1f2937'; ctx.font='12px Segoe UI';
-        ctx.fillText('Total Expenses', cx, cy+12);
-        ctx.restore();
-      }
-    };
+    const expData   = [17849, 1540, 1330, 1005, 850, 600, 559, 503, 503, 93];
+    const expLabels = ['Mortgage','Repairs & Labor','Landscaping','Electric','Cleaning','Other','Internet','Gas','Water','Solar'];
+    const expColors = ['#c9a84c','#60a5fa','#4ade80','#fbbf24','#f472b6','#94a3b8','#a855f7','#f97316','#38bdf8','#22c55e'];
+    const total     = expData.reduce((a,b)=>a+b,0);
 
     new Chart(document.getElementById('expenseDonut'), {
-      type: 'doughnut',
+      type: 'bar',
       data: {
         labels: expLabels,
         datasets:[{
+          label: 'Amount',
           data: expData,
           backgroundColor: expColors,
-          borderColor:'rgba(13,27,46,0.8)',
-          borderWidth:2,
-          hoverOffset:12,
-          hoverBorderColor:'#c9a84c'
+          borderRadius: 6,
+          borderSkipped: false,
+          barThickness: 28
         }]
       },
-      plugins:[centerTextPlugin, outerLabelsPlugin],
-      options:{
-        responsive:true, maintainAspectRatio:true, aspectRatio:1, cutout:'68%',
-        layout:{ padding:{ left:160, right:160, top:20, bottom:20 } },
-        plugins:{
-          datalabels:{ display:false },
-          legend:{ display:false },
-          tooltip:{ ...tooltipDefaults, callbacks:{
-            label: ctx => {
-              const pct = ((ctx.parsed/total)*100).toFixed(1);
-              return ` ${fmtDollar(ctx.parsed)}  (${pct}%)`;
+      options: {
+        indexAxis: 'y',
+        responsive: true,
+        maintainAspectRatio: false,
+        plugins: {
+          outerLabels: false,
+          centerText: false,
+          legend: { display: false },
+          datalabels: {
+            anchor: 'end',
+            align: 'end',
+            color: '#1f2937',
+            font: { size: 12, weight: 'bold' },
+            formatter: (v) => {
+              const pct = ((v/total)*100).toFixed(1);
+              return '$'+v.toLocaleString()+' ('+pct+'%)';
             }
-          }}
+          },
+          tooltip: {
+            ...tooltipDefaults,
+            callbacks: {
+              label: ctx => {
+                const pct = ((ctx.parsed.x/total)*100).toFixed(1);
+                return ' '+fmtDollar(ctx.parsed.x)+' — '+pct+'% of total';
+              }
+            }
+          }
+        },
+        layout: { padding: { right: 140 } },
+        scales: {
+          x: {
+            ticks: { color:'#1f2937', callback: v => '$'+v.toLocaleString() },
+            grid: { color:'rgba(0,0,0,0.06)' },
+            suggestedMax: 20000
+          },
+          y: {
+            ticks: { color:'#1f2937', font:{ size:13, weight:'600' } },
+            grid: { display: false }
+          }
         }
       }
     });
