Fix tab text color to white on dark nav bar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body{font-family:'Segoe UI',system-ui,sans-serif;background:#0d1b2e;color:#1f293
 .logo span{color:#fff;font-weight:300}
 .timestamp{color:#1f2937;font-size:13px}
 .tabs{display:flex;background:#0d1b2e;border-bottom:1px solid #1e3a5f;padding:0 24px;overflow-x:auto;gap:4px}
-.tab-btn{padding:14px 20px;cursor:pointer;border:none;background:transparent;color:#1f2937;font-size:14px;font-weight:500;border-bottom:3px solid transparent;white-space:nowrap;transition:all .2s}
+.tab-btn{padding:14px 20px;cursor:pointer;border:none;background:transparent;color:#ffffff;font-size:14px;font-weight:500;border-bottom:3px solid transparent;white-space:nowrap;transition:all .2s}
 .tab-btn:hover{color:#c9a84c}
 .tab-btn.active{color:#c9a84c;border-bottom-color:#c9a84c}
 .tab-content{display:none;padding:28px 32px;max-width:1400px;margin:0 auto}
