--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@ canvas{max-height:320px}
     <!-- Monthly Income / Expenses / Profit -->
     <div class="chart-card" style="margin-bottom:20px">
       <div class="chart-title">📈 Monthly P&L Summary — Income vs Expenses vs Profit</div>
-      <canvas id="monthlyPLChart" style="min-height:380px;width:100%"></canvas>
+      <canvas id="monthlyPLChart" style="min-height:500px;width:100%"></canvas>
         <div style="display:flex;flex-wrap:wrap;gap:12px 20px;margin-top:14px;padding:10px 14px;background:#f8f9fb;border-radius:8px;border:1px solid #1f2937;">
           <div style="display:flex;align-items:center;gap:8px;font-size:12px;color:#444;">
             <div style="width:16px;height:12px;background:#22c55e;border-radius:3px;flex-shrink:0;"></div>
@@ -572,7 +572,7 @@ canvas{max-height:320px}
     <div class="chart-row">
     <div class="chart-card">
       <div class="chart-title">📈 Income vs Expenses by Property (Jan 2026)</div>
-      <canvas id="propIncomeChart" style="min-height:380px;width:100%"></canvas>
+      <canvas id="propIncomeChart" style="min-height:500px;width:100%"></canvas>
     </div>
     <div class="chart-card">
       <div class="chart-title" style="display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap;gap:8px;">
@@ -595,17 +595,17 @@ canvas{max-height:320px}
     </div>
     <div class="chart-card">
       <div class="chart-title">📊 PadSplit Income — Jan vs Feb 2026</div>
-      <canvas id="padsplitChart" style="min-height:380px;width:100%"></canvas>
+      <canvas id="padsplitChart" style="min-height:500px;width:100%"></canvas>
     </div>
   </div>
   <div class="chart-row" style="display:none">
     <div class="chart-card">
       <div class="chart-title">📊 PadSplit Income — Jan vs Feb 2026 (hidden duplicate placeholder)</div>
-      <canvas id="padsplitChartDupe" style="min-height:380px;width:100%"></canvas>
+      <canvas id="padsplitChartDupe" style="min-height:500px;width:100%"></canvas>
     </div>
     <div class="chart-card">
       <div class="chart-title">⚡ Monthly Utility Costs by Property</div>
-      <canvas id="utilityChart" style="min-height:380px;width:100%"></canvas>
+      <canvas id="utilityChart" style="min-height:500px;width:100%"></canvas>
     </div>
   </div>
 </div>
@@ -683,7 +683,7 @@ canvas{max-height:320px}
   <h2 style="color:#c9a84c;margin-bottom:16px">⚡ Utility Accounts</h2>
   <div class="chart-card" style="margin-bottom:20px">
     <div class="chart-title">📊 Monthly Utility Costs by Property &amp; Type</div>
-    <canvas id="utilityStackChart" style="min-height:320px;max-height:400px"></canvas>
+    <canvas id="utilityStackChart" style="min-height:320px;max-height:500px"></canvas>
   </div>
 
   <!-- Electric APS -->
@@ -1383,7 +1383,7 @@ canvas{max-height:320px}
         <span><span style="display:inline-block;width:12px;height:12px;background:#10b981;border-radius:2px;margin-right:4px;"></span>Net to Host</span>
       </div>
     </div>
-    <canvas id="propRoomChart" height="500"></canvas>
+    <canvas id="propRoomChart" height="500"></canvas></canvas>
   </div>
 
   <!-- Detail Table -->
@@ -2087,8 +2087,8 @@ function initDashboard() {
         }}
       },
       scales:{
-        x:{ticks:{color:'#1f2937'}, grid:{color:'rgba(255,255,255,0.05)'}},
-        y:{ticks:{color:'#1f2937',callback:v=>'$'+v.toLocaleString()}, grid:{color:'rgba(255,255,255,0.05)'},
+        x:{ticks:{color:'#1f2937'}, grid:{color:'rgba(0,0,0,0.08)'}},
+        y:{ticks:{color:'#1f2937',callback:v=>'$'+v.toLocaleString()}, grid:{color:'rgba(0,0,0,0.08)'},
            suggestedMax:7000}
       }
     }
@@ -2312,8 +2312,8 @@ function initDashboard() {
         }}
       },
       scales:{
-        x:{ticks:{color:'#1f2937'}, grid:{color:'rgba(255,255,255,0.05)'}},
-        y:{ticks:{color:'#1f2937',callback:v=>'$'+v.toLocaleString()}, grid:{color:'rgba(255,255,255,0.05)'},
+        x:{ticks:{color:'#1f2937'}, grid:{color:'rgba(0,0,0,0.08)'}},
+        y:{ticks:{color:'#1f2937',callback:v=>'$'+v.toLocaleString()}, grid:{color:'rgba(0,0,0,0.08)'},
            suggestedMax:6000}
       }
     }
@@ -2340,8 +2340,8 @@ function initDashboard() {
       }
     },
     scales:{
-      x:{stacked:true, ticks:{color:'#1f2937'}, grid:{color:'rgba(255,255,255,0.05)'}},
-      y:{stacked:true, ticks:{color:'#1f2937',callback:v=>'$'+v}, grid:{color:'rgba(255,255,255,0.05)'}}
+      x:{stacked:true, ticks:{color:'#1f2937'}, grid:{color:'rgba(0,0,0,0.08)'}},
+      y:{stacked:true, ticks:{color:'#1f2937',callback:v=>'$'+v}, grid:{color:'rgba(0,0,0,0.08)'}}
     }
   };
 
@@ -2467,12 +2467,12 @@ function initDashboard() {
       scales:{
         x:{
           ticks:{color:'#1f2937'},
-          grid:{color:'rgba(255,255,255,0.05)'},
+          grid:{color:'rgba(0,0,0,0.08)'},
           grouped: false
         },
         y:{
           ticks:{color:'#1f2937', callback: v => '$'+Math.abs(v).toLocaleString()},
-          grid:{color:'rgba(255,255,255,0.05)'},
+          grid:{color:'rgba(0,0,0,0.08)'},
           suggestedMax:45000,
           suggestedMin:-18000
         }
