--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0/dist/chartjs-plugin-datalabels.min.js"></script>
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
-body{font-family:'Segoe UI',system-ui,sans-serif;background:#f0f4f8;color:#1f2937;min-height:100vh}
+body{font-family:'Segoe UI',system-ui,sans-serif;background:#ffffff;color:#1f2937;min-height:100vh}
 .top-bar{background:linear-gradient(135deg,#0d1b2e 0%,#1a2d4a 100%);border-bottom:2px solid #c9a84c;padding:16px 32px;display:flex;align-items:center;justify-content:space-between}
 .logo{font-size:22px;font-weight:700;color:#c9a84c;letter-spacing:1px}
 .logo span{color:#fff;font-weight:300}
@@ -131,7 +131,7 @@ canvas{max-height:320px}
 @media(max-width:768px){.chart-row{grid-template-columns:1fr}.kpi-grid{grid-template-columns:1fr 1fr}.tab-btn{padding:10px 14px;font-size:12px}}
 
 /* ── Overview White Theme ── */
-.tab-panel { background:#f0f4f8; padding:20px; border-radius:0; }
+.tab-panel { background:#ffffff; padding:20px; border-radius:0; }
 
 
 
@@ -164,7 +164,7 @@ canvas{max-height:320px}
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
-body{font-family:'Segoe UI',system-ui,sans-serif;background:#f0f4f8;color:#1f2937;min-height:100vh}
+body{font-family:'Segoe UI',system-ui,sans-serif;background:#ffffff;color:#1f2937;min-height:100vh}
 .top-bar{background:linear-gradient(135deg,#0d1b2e 0%,#1a2d4a 100%);border-bottom:2px solid #c9a84c;padding:16px 32px;display:flex;align-items:center;justify-content:space-between}
 .logo{font-size:22px;font-weight:700;color:#c9a84c;letter-spacing:1px}
 .logo span{color:#fff;font-weight:300}
@@ -287,7 +287,7 @@ canvas{max-height:320px}
 @media(max-width:768px){.chart-row{grid-template-columns:1fr}.kpi-grid{grid-template-columns:1fr 1fr}.tab-btn{padding:10px 14px;font-size:12px}}
 
 /* ── Overview White Theme ── */
-.tab-panel { background:#f0f4f8; padding:20px; border-radius:0; }
+.tab-panel { background:#ffffff; padding:20px; border-radius:0; }
 
 
 
@@ -357,7 +357,7 @@ canvas{max-height:320px}
   <!-- KPI Section Header styles -->
   <style>
 *{margin:0;padding:0;box-sizing:border-box}
-body{font-family:'Segoe UI',system-ui,sans-serif;background:#f0f4f8;color:#1f2937;min-height:100vh}
+body{font-family:'Segoe UI',system-ui,sans-serif;background:#ffffff;color:#1f2937;min-height:100vh}
 .top-bar{background:linear-gradient(135deg,#0d1b2e 0%,#1a2d4a 100%);border-bottom:2px solid #c9a84c;padding:16px 32px;display:flex;align-items:center;justify-content:space-between}
 .logo{font-size:22px;font-weight:700;color:#c9a84c;letter-spacing:1px}
 .logo span{color:#fff;font-weight:300}
@@ -480,7 +480,7 @@ canvas{max-height:320px}
 @media(max-width:768px){.chart-row{grid-template-columns:1fr}.kpi-grid{grid-template-columns:1fr 1fr}.tab-btn{padding:10px 14px;font-size:12px}}
 
 /* ── Overview White Theme ── */
-.tab-panel { background:#f0f4f8; padding:20px; border-radius:0; }
+.tab-panel { background:#ffffff; padding:20px; border-radius:0; }
 
 
 
@@ -1855,6 +1855,14 @@ function renderExpenses(search, cat, prop, month) {
 
 // ---- Charts ----
 function initDashboard() {
+  // Wait for expensesAutoLoaded to be defined (loaded from auto-load-data.js)
+  if (typeof expensesAutoLoaded === 'undefined') {
+    console.log('Waiting for expensesAutoLoaded to load...');
+    setTimeout(initDashboard, 100);
+    return;
+  }
+  
+  console.log('expensesAutoLoaded loaded:', expensesAutoLoaded.length, 'transactions');
   rebuildStackedDataFromExpenses();
   // Destroy any existing chart instances to prevent conflicts
   Chart.helpers && Object.values(Chart.instances || {}).forEach(c => c.destroy && c.destroy());
