--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <button class="tab-btn" onclick="showTab('expenses')">💸 Expenses</button>
   <button class="tab-btn" onclick="showTab('utilities')">⚡ Utilities</button>
   <button class="tab-btn" onclick="showTab('vendors')">🤝 Vendors</button>
-  <button class="tab-btn" onclick="showTab('review')" id="tab-review">🔴 Needs Review</button>
+  <button class="tab-btn" onclick="showTab('review')">🔴 Needs Review</button>
   <button class="tab-btn" onclick="showTab('optimize')">💰 Optimize</button>
   
   <button class="tab-btn" onclick="showTab('upload')">📤 Upload Data</button><button class="tab-btn" onclick="showTab('howto')">📋 How to Update</button>
@@ -318,11 +318,11 @@ canvas{max-height:320px}
 <div id="tab-expenses" class="tab-content">
 
   <!-- Stacked Expense Chart: By Property & Category -->
-  <div style="background:#1e2433;border-radius:14px;padding:22px 24px;margin-bottom:28px;border:1px solid #2d3448;">
+  <div style="background:#ffffff;border-radius:14px;padding:22px 24px;margin-bottom:28px;border:1px solid #e2e8f0;box-shadow:0 2px 8px rgba(0,0,0,0.06);">
     <div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:12px;margin-bottom:18px;">
       <div>
-        <h3 style="color:#f1f5f9;margin:0 0 4px 0;font-size:17px;">📊 Expenses by Property &amp; Category</h3>
-        <div style="color:#94a3b8;font-size:12px;">Stacked view — each bar = one property, color = expense category</div>
+        <h3 style="color:#1e293b;margin:0 0 4px 0;font-size:17px;">📊 Expenses by Property &amp; Category</h3>
+        <div style="color:#64748b;font-size:12px;">Stacked view — each bar = one property, color = expense category</div>
       </div>
       <div style="display:flex;gap:8px;flex-wrap:wrap;">
         <button onclick="setStackView('monthly')" id="btnStackMonthly"
@@ -335,9 +335,9 @@ canvas{max-height:320px}
       <canvas id="stackedExpenseChart" style="width:100%;height:100%;"></canvas>
     </div>
     <!-- Legend -->
-    <div id="stackedExpLegend" style="display:flex;flex-wrap:wrap;gap:8px 16px;margin-top:14px;padding:10px 14px;background:#161b2a;border-radius:8px;border:1px solid #2d3448;"></div>
+    <div id="stackedExpLegend" style="display:flex;flex-wrap:wrap;gap:8px 16px;margin-top:14px;padding:10px 14px;background:#f8fafc;border-radius:8px;border:1px solid #e2e8f0;"></div>
     <!-- Addenda -->
-    <div style="display:flex;flex-wrap:wrap;gap:10px 20px;margin-top:10px;padding:10px 14px;background:#0f1421;border-radius:8px;border:1px solid #2d3448;">
+    <div style="display:flex;flex-wrap:wrap;gap:10px 20px;margin-top:10px;padding:10px 14px;background:#f1f5f9;border-radius:8px;border:1px solid #e2e8f0;">
       <div style="font-size:11px;color:#64748b;"><strong style="color:#94a3b8;">Each bar</strong> = one investment property (excludes primary residence &amp; inactive)</div>
       <div style="font-size:11px;color:#64748b;"><strong style="color:#94a3b8;">Colors</strong> = expense category stacked within each property bar</div>
       <div style="font-size:11px;color:#64748b;"><strong style="color:#94a3b8;">Monthly view</strong> = Jan &amp; Feb 2026 side-by-side per property</div>
